# widev

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
clients/desktop/: Cargo.toml  build.rs
clients/desktop-bots/: Cargo.toml
clients/desktop-bots/src/: lib.rs  main.rs  protocol.rs
clients/desktop/src/: game.rs  main.rs
clients/desktop/src/game/: app.rs  bindings.rs  input_path_minifb.rs  input_path_winit.rs  mod.rs  network.rs  network_migration.rs  packet_chain.rs  persistence.rs  protocol.rs  renderer.rs
clients/desktop/src/game/bindings/: capture.rs  mod.rs  model.rs
clients/desktop/state/: bindings.json
common/packets/: packets.json
common/protocol_codegen/: Cargo.toml
common/protocol_codegen/src/: lib.rs
scripts/: common-tools.sh  flamegraph.sh  network-trace-viewer.html
server/: Cargo.toml  build.rs
server/src/: game.rs  game_loop.rs  game_state.rs  main.rs  network.rs  network_platform.rs  network_trace.rs  packet_codec.rs  packet_scheduler.rs  packets.rs
server/src/games/: mod.rs  pong.rs  red_square.rs
server/src/net/: mod.rs  network.rs  network_trace.rs  network_trace_presentation.rs  packet_codec.rs  packet_scheduler.rs
xtask/: Cargo.toml
xtask/src/: main.rs
