[workspace]
members = [
  "server",
  "clients/desktop",
  "common/protocol_codegen",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
quiche = "0.24"
anyhow = "1"
rcgen = "0.13"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
