[workspace]
members = [
  "server",
  "clients/desktop",
  "clients/desktop-bots",
  "common/protocol_codegen",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wincode = { version = "0.4.5", features = ["derive"] }
rand = "0.10"
quiche = "0.26"
anyhow = "1"
rcgen = "0.14"
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
strum = { version = "0.27", features = ["derive"] }

[profile.release]
debug = true
