[package]
name = "widev-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
quiche = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rcgen = { workspace = true }
clap = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protocol_codegen = { path = "../common/protocol_codegen" }
