[package]
name = "widev-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
quiche = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rcgen = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
mio = { version = "1.1.1", features = ["os-poll", "net"] }
quinn-udp = { version = "0.5.14", features = ["fast-apple-datapath"] }
uuid = { version = "1.22.0", features = ["v7"] }
thiserror = "2.0.12"

[build-dependencies]
anyhow = { workspace = true }
protocol_codegen = { path = "../common/protocol_codegen" }
