[package]
name = "widev-desktop-bots"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
quiche = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protocol_codegen = { path = "../../common/protocol_codegen" }
