[package]
name = "widev-desktop-bots"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
quiche = { workspace = true }
rand = { workspace = true }
wincode = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
mio = { version = "1.1.1", features = ["os-poll", "net"] }
libc = { workspace = true }
indicatif = "0.18.4"

[build-dependencies]
anyhow = { workspace = true }
protocol_codegen = { path = "../../common/protocol_codegen" }
