[package]
name = "widev-desktop-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
quiche = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
winit = "0.30.12"
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
gilrs = "0.11.0"
taffy = "0.9.2"

[build-dependencies]
anyhow = { workspace = true }
protocol_codegen = { path = "../../common/protocol_codegen" }
