[package]
name = "widev-desktop-client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
quiche = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
wincode = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
winit = "0.30.13"
wgpu = "28.0.0"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
gilrs = "0.11.1"
taffy = "0.9.2"
muda = "0.17.1"
glyphon = "0.10.0"
png = "0.17.16"
futures = "0.3"
if-watch = { version = "=3.2.2", features = ["smol"] }
smol = "2"

[build-dependencies]
anyhow = { workspace = true }
protocol_codegen = { path = "../../common/protocol_codegen" }
